# strange-loop

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/adapter-cli/: Cargo.toml
crates/adapter-cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  budget.rs  config.rs  context.rs  governance.rs  lib.rs  logging.rs  runtime.rs  scheduler.rs  task.rs  task_runner.rs  tool_loop.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs  mock.rs  openrouter.rs  types.rs
crates/store/: Cargo.toml
crates/store/src/: events.rs  kv.rs  lib.rs
crates/strange-loop/: Cargo.toml
crates/strange-loop/src/: main.rs
crates/tools/: Cargo.toml
crates/tools/src/: dispatcher.rs  fs.rs  lib.rs  registry.rs  tool.rs
docs/: ANALYSIS.md  PRD.md  ROADMAP.md  STACK_DECISION.md  SYSTEM_SPEC.md  TREATISE.md
prompts/: CHARTER.md  CREED.md  DOCTRINE.md  JOURNAL-seed.md  doctrine.toml
