[package]
name = "strange-loop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sl_core"
path = "src/lib.rs"

[dependencies]
strange-loop-store = { path = "../store" }
strange-loop-llm = { path = "../llm" }
strange-loop-tools = { path = "../tools" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
rusqlite.workspace = true
