[package]
name = "strange-loop-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sl_llm"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
