[package]
name = "strange-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "strange-loop"
path = "src/main.rs"

[dependencies]
strange-loop-core = { path = "../core" }
strange-loop-store = { path = "../store" }

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
