[package]
name = "strange-loop-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sl_tools"
path = "src/lib.rs"

[dependencies]
strange-loop-llm = { path = "../llm" }
strange-loop-store = { path = "../store" }

async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
